--- a/.github/taskfiles/cluster.tasks.yaml
+++ b/.github/taskfiles/cluster.tasks.yaml
@@ -20,7 +20,11 @@ tasks:
       - task: :flux:install
       - task: init-config
       - task: apply-resources
+        vars:
+          APPLY: true
       - task: apply-flux-resources
+        vars:
+          APPLY: true
 
   update-vars:
     cmds:
@@ -47,7 +51,7 @@ tasks:
       ENV_FILE: '{{ or .ENV_FILE (fail "Missing FILE environment variable!") }}'
       NAME: '{{ or .NAME (fail "Missing NAME environment variable!") }}'
     cmds:
-      - sops exec-file {{.ENV_FILE}} "SOPS_FILE={} task --taskfile {{.ROOT_DIR}}/Taskfile.dist.yaml cluster:generate-kustomization APPLY={{.APPLY}} NAME={{.NAME}}"
+      - sops exec-file {{.ENV_FILE}} "SOPS_FILE={} task --taskfile {{.ROOT_DIR}}/Taskfile.dist.yaml cluster:generate-kustomization NAME={{.NAME}}"
 
   generate-kustomization:
     vars:
@@ -55,14 +59,13 @@ tasks:
       SECRET_TEMPLATE: "{{.ROOT_DIR}}/kubernetes/bootstrap/config/secret.tmpl.yaml"
       SOPS_DIR:
         sh: echo {{.SOPS_FILE}} | xargs dirname
-      SED_COMMAND: 's/\=/: /g' # Command to surrond with single quotes 's/\=/: \x27/g;s/$/\x27/'
+      SED_COMMAND: 's/\=/: \x27/g;s/$/\x27/' # Command to surround with single quotes 's/\=/: \x27/g;s/$/\x27/'
     cmds:
       - cat {{.SOPS_FILE}} > {{.SOPS_DIR}}/vars.unencrypted.yaml
       - sed -i '{{.SED_COMMAND}}' {{.SOPS_DIR}}/vars.unencrypted.yaml
       - yq eval-all 'select(fileIndex==0).stringData = select(fileIndex==1) | select(fileIndex==0)' {{.SECRET_TEMPLATE}} {{.SOPS_DIR}}/vars.unencrypted.yaml > {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml
       - CLUSTER={{.C}} NAME={{.NAME}} yq -i '(.. | select(tag == "!!str")) |= envsubst' {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml
       - sops -e {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml > {{.ROOT_DIR}}/kubernetes/clusters/{{.C}}/vars/{{.C}}-{{.NAME}}.yaml
-      #- cp {{.SOPS_DIR}}/{{.C}}-{{.NAME}}.unencrypted.yaml {{.ROOT_DIR}}/kubernetes/clusters/{{.C}}/vars/{{.C}}-{{.NAME}}.unencrypted.yaml
 
   apply-resources:
     dir: "{{.ROOT_DIR}}/kubernetes/clusters/{{.C}}"
