--- a/.github/taskfiles/talos.tasks.yaml
+++ b/.github/taskfiles/talos.tasks.yaml
@@ -53,7 +53,7 @@ tasks:
       - task: configfile-talos
       - task: configfile-kube
       - sleep 60
-      - task: :k8s:cilium-bootstrap
+      - task: cilium-bootstrap
       - task: enable-vmtools
 
   deploy-cluster:
@@ -310,6 +310,21 @@ tasks:
       - talosctl --talosconfig ./clusterconfig/talosconfig kubeconfig ~/.kube/config
       - |
         sed -i "s/current-context: admin@.*/current-context: admin@{{.C}}/g" ~/.kube/config || true
+
+  cilium-bootstrap:
+    aliases: [cilium]
+    desc: Bootstrap Cilium onto new cluster, ready for Flux to take over managing Cilium.
+    dir: "{{.ROOT_DIR}}/kubernetes/bootstrap/cilium"
+    dotenv: ["{{.SECRETS_DIR}}/{{.C}}.vars.unencrypted.env"]
+    vars:
+      C: '{{ or .C (fail "Missing C environment variable for cluster!") }}'
+    cmds:
+      - kubectl delete configmap -n kube-system cilium-config || true
+      - kubectl delete daemonset -n kube-system cilium || true
+      - kubectl delete deployment -n kube-system cilium-operator || true
+      - envsubst < {{.ROOT_DIR}}/kubernetes/deployments/core/_networking/cilium/app/base-values.yaml > values.yaml
+      - kubectl kustomize --enable-helm --load-restrictor=LoadRestrictionsNone | kubectl apply -f -
+      - defer: rm -rf {{.ROOT_DIR}}/kubernetes/bootstrap/cilium/charts && rm -rf {{.ROOT_DIR}}/kubernetes/bootstrap/cilium/values.yaml
 
   # Generate secret for vmware tools daemonset authentication
   # https://www.talos.dev/v1.5/talos-guides/install/virtualized-platforms/vmware/#configure-talos-vmtoolsd
