Fix app reference

--- a/kubernetes/deployments/core/kubelet-csr-approver/app/hr.yaml
+++ b/kubernetes/deployments/core/kubelet-csr-approver/app/hr.yaml
@@ -9,7 +9,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: &app
+      chart: *app
       version: 1.0.5
       sourceRef:
         kind: HelmRepository
