--- a/kubernetes/clusters/kube-prod/flux/kustomization.yaml
+++ b/kubernetes/clusters/kube-prod/flux/kustomization.yaml
@@ -5,8 +5,6 @@ resources:
   - ../vars/
   - flux-install.yaml
   - flux-repo.yaml
-  - ../../../deployments/core/kubelet-csr-approver/
-  - ../../../deployments/core/_networking/cilium/
-  - ../../../deployments/core/ingress/_deps/
-  - ../../../deployments/core/ingress/ingress-nginx/
-  - ../../../deployments/core/external-secrets
+  - ../../../apps/kube-system/
+  - ../../../apps/ingress-nginx/
+  - ../../../apps/security-system/
