--- a/kubernetes/apps/security-system/external-secrets/stores/secrets.yaml
+++ b/kubernetes/apps/security-system/external-secrets/stores/secrets.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: onepassword-connect-token
-  namespace: external-secrets
+  namespace: security-system
 type: Opaque
 stringData:
   token: "${OP_CONNECT_TOKEN}"
